# ndaybench

./: .env.example  .gitignore  Dockerfile.ghidriff  README.md  pyproject.toml
bench/: candidates-2026.md
bench/CVE-2024-49138/: brief.md  references.md
bench/CVE-2025-26633/: brief.md  references.md
docs/: dataflow.md
recipes/baselines/: server2022-2026-04.yaml  server2022-2026-05.yaml  win11-22h2-2024-07.yaml  win11-22h2-2025-02.yaml  win11-22h2-2025-03.yaml  win11-22h2-2025-10.yaml
recipes/customizations/: full-crash-dump.yaml  kd-net-e1000e.yaml  kd-net-vmbus.yaml  lpe-harness.yaml  rce-harness.yaml  secureboot-on.yaml
recipes/editions/: server2022-std.yaml  win11-22h2-enterprise.yaml
recipes/tasks/: CVE-2024-49138.yaml  CVE-2025-26633.yaml  example-CVE-2026-XXXXX.yaml  poc-win11-march2025.yaml  poc-win11-roundtrip.yaml
src/bakery/: __init__.py  _schema.py  builder.py  cache.py  cli.py  proxmox.py  recipe.py
src/ndaybench/: __init__.py  cli.py  db.py  host.py  lint.py  openvmm.py  oracle.py  runner.py  stub_agent.py  sweep.py  tools.py  vm.py
src/patchwatch/: __init__.py  _schema.py  adapter.py  cab.py  cache.py  catalog.py  cli.py  diff.py  ingest.py  lzx.py  markdown_report.py  msp.py  msp_adapter.py  poc_bundle.py  sug.py  winbindex.py  windows.py  windows_msu.py
tests/: conftest.py  test_db.py  test_host.py  test_lint.py  test_oracle.py  test_recipe_schema.py  test_sweep.py
tests/integration/: test_runner.py
tools/: build_secrets_iso.py
tools/openvmm-base/: README.md  autounattend.xml  build-base.sh  make-answer-iso.sh  (+1 more)
(+4 files in other folders)
