[project]
name = "patchwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stackviolator", email = "stackviolator@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "grpcio>=1.80.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "olefile>=0.47",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.25.1",
]

[project.scripts]
patchwatch = "patchwatch.cli:app"
bakery = "bakery.cli:app"
ndaybench = "ndaybench.cli:app"

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: hits real Proxmox infra; set NDAYBENCH_INTEGRATION=1 to enable",
]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
python-version = "3.12"
